--- a/src/index.css
+++ b/src/index.css
@@ -46,20 +46,19 @@ h4 {
   font-size: 2.3rem;
 }
 
-.todos {
-  width: 100%;
+.buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 50%;
+  align-items: center;
+  height: 100vh;
   border: 1px solid white;
+  margin: auto;
+}
+
+.buttons button {
+  width: 60%;
   padding: 20px;
-}
-
-.todos input {
-  width: 70%;
-  padding: 20px 10px;
-  font-size: 2rem;
-  font-weight: 400;
-}
-
-.todos button {
-  padding: 20px 10px;
-  font-size: 2rem;
+  border-radius: 10px;
 }
