crud oopration perform

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #090909;
+  background-color: #f8f3f3;
   color: rgb(247, 236, 236);
   text-align: center;
 }
@@ -61,9 +61,10 @@ h4 {
 }
 
 .buttons button {
-  width: 200px;
+  width: 300px;
   height: 200px;
   padding: 20px;
+  font-size: 2rem;
   border-radius: 10px;
   cursor: pointer;
   transition: all 0.4s;
@@ -127,5 +128,9 @@ h4 {
 }
 .buttons button:nth-child(14):hover {
   background-color: rgb(140, 35, 117);
+  color: rgb(248, 245, 245);
+}
+.buttons button:nth-child(15):hover {
+  background-color: rgb(41, 85, 205);
   color: rgb(248, 245, 245);
 }
